// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RentalAssistance should be able to show the add rental assistance form along with the table 1`] = `
<form
  noValidate={true}
>
  <div
    className="form-grid row expand"
  >
    <div
      className="small-12 column"
    >
      <div
        className="scrollable-table-container-under-xlarge"
      >
        <table
          className="td-light td-plain th-plain rental-assistances"
          role="grid"
        >
          <thead>
            <tr>
              <th
                className=""
                scope="col"
              >
                Type of Assistance
              </th>
              <th
                className=""
                scope="col"
              >
                Recurring Assistance
              </th>
              <th
                className=""
                scope="col"
              >
                Assistance Amount
              </th>
              <th
                className=""
                scope="col"
              >
                Recipient
              </th>
              <th
                className=""
                scope="col"
              >
                Edit
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              aria-expanded={false}
              className="tr-expand"
              id={null}
            >
              <td
                className=""
              >
                Compass Family
              </td>
              <td
                className=""
              >
                Yes
              </td>
              <td
                className=""
              >
                100
              </td>
              <td
                className=""
              >
                Test Tester
              </td>
              <td>
                <button
                  className="button button-link action-link"
                  onClick={[Function]}
                  type="button"
                >
                  Edit
                </button>
              </td>
            </tr>
            <tr
              aria-hidden={true}
              className="tr-expand-content"
              id={null}
            >
              <td
                className="td-expand-nested no-padding"
                colSpan={5}
              >
                <div
                  className="app-editable expand-wide scrollable-table-nested"
                >
                  <div
                    className="app-editable expand-wide scrollable-table-nested rental-assistance-edit-form"
                  >
                    <div
                      className="form-grid row"
                    >
                      <div
                        className="form-grid_item small-12 medium-6 large-3 column"
                      >
                        <div
                          className="form-group"
                        >
                          <label
                            className="form-label"
                            htmlFor="form-rental_assistances.0.type_of_assistance"
                            id="label-rental_assistances-0.type_of_assistance"
                          >
                            Type of Assistance
                          </label>
                          <select
                            className="rental-assistance-type"
                            id="form-rental_assistances.0.type_of_assistance"
                            name="rental_assistances.0.type_of_assistance"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            value="Compass Family"
                          >
                            <option
                              value=""
                            >
                              Select One...
                            </option>
                            <option
                              value="Catholic Charities"
                            >
                              Catholic Charities
                            </option>
                            <option
                              value="Compass Family"
                            >
                              Compass Family
                            </option>
                            <option
                              value="Glide"
                            >
                              Glide
                            </option>
                            <option
                              value="Hamilton Family"
                            >
                              Hamilton Family
                            </option>
                            <option
                              value="Homeless Prenatal"
                            >
                              Homeless Prenatal
                            </option>
                            <option
                              value="HOPWA"
                            >
                              HOPWA
                            </option>
                            <option
                              value="Q Foundation: First Month’s Rent"
                            >
                              Q Foundation: First Month’s Rent
                            </option>
                            <option
                              value="Q Foundation: Move-in Deposit"
                            >
                              Q Foundation: Move-in Deposit
                            </option>
                            <option
                              value="Q Foundation: Person with Disability Rent Subsidy"
                            >
                              Q Foundation: Person with Disability Rent Subsidy
                            </option>
                            <option
                              value="Q Foundation: Senior Rent Subsidy"
                            >
                              Q Foundation: Senior Rent Subsidy
                            </option>
                            <option
                              value="San Francisco AIDS Foundation"
                            >
                              San Francisco AIDS Foundation
                            </option>
                            <option
                              value="Section 8 HCV (tenant) voucher"
                            >
                              Section 8 HCV (tenant) voucher
                            </option>
                            <option
                              value="Self-Help for the Elderly"
                            >
                              Self-Help for the Elderly
                            </option>
                            <option
                              value="VASH voucher"
                            >
                              VASH voucher
                            </option>
                            <option
                              value="Other"
                            >
                              Other
                            </option>
                          </select>
                        </div>
                      </div>
                      <div
                        className="form-grid_item small-12 medium-6 large-3 column"
                      >
                        <div
                          className="rental-assistance-recurring radio-group-inline"
                        >
                          <label
                            className="form-label"
                            htmlFor="form-rental_assistances.0.recurring_assistance"
                            id="label-rental_assistances-0.recurring_assistance"
                          >
                            Recurring Assistance
                          </label>
                          <p
                            className="radio-inline"
                          >
                            <input
                              checked={true}
                              id="rental_assistances.0.recurring_assistance-new-yes"
                              name="rental_assistances.0.recurring_assistance"
                              onBlur={[Function]}
                              onChange={[Function]}
                              onFocus={[Function]}
                              type="radio"
                              value="Yes"
                            />
                            <label
                              className="radio-inline_label"
                              htmlFor="rental_assistances.0.recurring_assistance-new-yes"
                            >
                              Yes
                            </label>
                          </p>
                          <p
                            className="radio-inline"
                          >
                            <input
                              checked={false}
                              id="rental_assistances.0.recurring_assistance-new-no"
                              name="rental_assistances.0.recurring_assistance"
                              onBlur={[Function]}
                              onChange={[Function]}
                              onFocus={[Function]}
                              type="radio"
                              value="No"
                            />
                            <label
                              className="radio-inline_label"
                              htmlFor="rental_assistances.0.recurring_assistance-new-no"
                            >
                              No
                            </label>
                          </p>
                        </div>
                      </div>
                      <div
                        className="form-grid_item small-12 medium-6 large-3 column"
                      >
                        <div
                          className="form-group"
                        >
                          <label
                            className="form-label"
                            htmlFor="assistance_amount"
                            id="label-rental_assistances-0.assistance_amount"
                          >
                            Assistance Amount
                          </label>
                          <input
                            className=""
                            id="assistance_amount"
                            name="rental_assistances.0.assistance_amount"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            placeholder="$0.00"
                            value="100"
                          />
                        </div>
                      </div>
                      <div
                        className="form-grid_item small-12 medium-6 large-3 column"
                      >
                        <div
                          className="form-group"
                        >
                          <label
                            className="form-label"
                            htmlFor="form-rental_assistances.0.recipient"
                            id="label-rental_assistances-0.recipient"
                          >
                            Recipient
                          </label>
                          <select
                            className="rental-assistance-recipient"
                            id="form-rental_assistances.0.recipient"
                            name="rental_assistances.0.recipient"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            value="123"
                          >
                            <option
                              value=""
                            >
                              Select One...
                            </option>
                            <option
                              value="123"
                            >
                              Test Tester
                            </option>
                          </select>
                        </div>
                      </div>
                    </div>
                    <div
                      className="form-grid row"
                    >
                      <div
                        className="form-grid_item column"
                      >
                        <button
                          className="button primary tiny margin-right margin-bottom-none"
                          onClick={[Function]}
                          type="button"
                        >
                          Save
                        </button>
                        <button
                          className="button secondary tiny margin-right margin-bottom-none"
                          onClick={[Function]}
                          type="button"
                        >
                          Cancel
                        </button>
                        <button
                          className="button alert-fill tiny margin-bottom-none right"
                          onClick={[Function]}
                          type="button"
                        >
                          Delete
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
  <div
    className="app-editable expand-wide scrollable-table-nested rental-assistance-new-form"
  >
    <div
      className="form-grid row"
    >
      <div
        className="form-grid_item small-12 medium-6 large-3 column"
      >
        <div
          className="form-group"
        >
          <label
            className="form-label"
            htmlFor="form-rental_assistances.1.type_of_assistance"
            id="label-rental_assistances-1.type_of_assistance"
          >
            Type of Assistance
          </label>
          <select
            className="rental-assistance-type"
            id="form-rental_assistances.1.type_of_assistance"
            name="rental_assistances.1.type_of_assistance"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            value=""
          >
            <option
              value=""
            >
              Select One...
            </option>
            <option
              value="Catholic Charities"
            >
              Catholic Charities
            </option>
            <option
              value="Compass Family"
            >
              Compass Family
            </option>
            <option
              value="Glide"
            >
              Glide
            </option>
            <option
              value="Hamilton Family"
            >
              Hamilton Family
            </option>
            <option
              value="Homeless Prenatal"
            >
              Homeless Prenatal
            </option>
            <option
              value="HOPWA"
            >
              HOPWA
            </option>
            <option
              value="Q Foundation: First Month’s Rent"
            >
              Q Foundation: First Month’s Rent
            </option>
            <option
              value="Q Foundation: Move-in Deposit"
            >
              Q Foundation: Move-in Deposit
            </option>
            <option
              value="Q Foundation: Person with Disability Rent Subsidy"
            >
              Q Foundation: Person with Disability Rent Subsidy
            </option>
            <option
              value="Q Foundation: Senior Rent Subsidy"
            >
              Q Foundation: Senior Rent Subsidy
            </option>
            <option
              value="San Francisco AIDS Foundation"
            >
              San Francisco AIDS Foundation
            </option>
            <option
              value="Section 8 HCV (tenant) voucher"
            >
              Section 8 HCV (tenant) voucher
            </option>
            <option
              value="Self-Help for the Elderly"
            >
              Self-Help for the Elderly
            </option>
            <option
              value="VASH voucher"
            >
              VASH voucher
            </option>
            <option
              value="Other"
            >
              Other
            </option>
          </select>
        </div>
      </div>
      <div
        className="form-grid_item small-12 medium-6 large-3 column"
      >
        <div
          className="rental-assistance-recurring radio-group-inline"
        >
          <label
            className="form-label"
            htmlFor="form-rental_assistances.1.recurring_assistance"
            id="label-rental_assistances-1.recurring_assistance"
          >
            Recurring Assistance
          </label>
          <p
            className="radio-inline"
          >
            <input
              checked={false}
              id="rental_assistances.1.recurring_assistance-new-yes"
              name="rental_assistances.1.recurring_assistance"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="radio"
              value="Yes"
            />
            <label
              className="radio-inline_label"
              htmlFor="rental_assistances.1.recurring_assistance-new-yes"
            >
              Yes
            </label>
          </p>
          <p
            className="radio-inline"
          >
            <input
              checked={false}
              id="rental_assistances.1.recurring_assistance-new-no"
              name="rental_assistances.1.recurring_assistance"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="radio"
              value="No"
            />
            <label
              className="radio-inline_label"
              htmlFor="rental_assistances.1.recurring_assistance-new-no"
            >
              No
            </label>
          </p>
        </div>
      </div>
      <div
        className="form-grid_item small-12 medium-6 large-3 column"
      >
        <div
          className="form-group"
        >
          <label
            className="form-label"
            htmlFor="assistance_amount"
            id="label-rental_assistances-1.assistance_amount"
          >
            Assistance Amount
          </label>
          <input
            className=""
            id="assistance_amount"
            name="rental_assistances.1.assistance_amount"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="$0.00"
            value=""
          />
        </div>
      </div>
      <div
        className="form-grid_item small-12 medium-6 large-3 column"
      >
        <div
          className="form-group"
        >
          <label
            className="form-label"
            htmlFor="form-rental_assistances.1.recipient"
            id="label-rental_assistances-1.recipient"
          >
            Recipient
          </label>
          <select
            className="rental-assistance-recipient"
            id="form-rental_assistances.1.recipient"
            name="rental_assistances.1.recipient"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            value=""
          >
            <option
              value=""
            >
              Select One...
            </option>
            <option
              value="123"
            >
              Test Tester
            </option>
          </select>
        </div>
      </div>
    </div>
    <div
      className="form-grid row"
    >
      <div
        className="form-grid_item column"
      >
        <button
          className="button primary tiny margin-right margin-bottom-none"
          onClick={[Function]}
          type="button"
        >
          Save
        </button>
        <button
          className="button secondary tiny margin-right margin-bottom-none"
          onClick={[Function]}
          type="button"
        >
          Cancel
        </button>
      </div>
    </div>
  </div>
  <button
    className="button small"
    id="add-rental-assistance"
    onClick={[Function]}
  >
    Add Rental Assistance
  </button>
</form>
`;

exports[`RentalAssistance should not render a table if rental assistances is empty 1`] = `
<form
  noValidate={true}
>
  <button
    className="button small"
    id="add-rental-assistance"
    onClick={[Function]}
  >
    Add Rental Assistance
  </button>
</form>
`;

exports[`RentalAssistance should render a table when rental assistances are present 1`] = `
<form
  noValidate={true}
>
  <div
    className="form-grid row expand"
  >
    <div
      className="small-12 column"
    >
      <div
        className="scrollable-table-container-under-xlarge"
      >
        <table
          className="td-light td-plain th-plain rental-assistances"
          role="grid"
        >
          <thead>
            <tr>
              <th
                className=""
                scope="col"
              >
                Type of Assistance
              </th>
              <th
                className=""
                scope="col"
              >
                Recurring Assistance
              </th>
              <th
                className=""
                scope="col"
              >
                Assistance Amount
              </th>
              <th
                className=""
                scope="col"
              >
                Recipient
              </th>
              <th
                className=""
                scope="col"
              >
                Edit
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              aria-expanded={false}
              className="tr-expand"
              id={null}
            >
              <td
                className=""
              >
                Compass Family
              </td>
              <td
                className=""
              >
                Yes
              </td>
              <td
                className=""
              >
                100
              </td>
              <td
                className=""
              >
                Test Tester
              </td>
              <td>
                <button
                  className="button button-link action-link"
                  onClick={[Function]}
                  type="button"
                >
                  Edit
                </button>
              </td>
            </tr>
            <tr
              aria-hidden={true}
              className="tr-expand-content"
              id={null}
            >
              <td
                className="td-expand-nested no-padding"
                colSpan={5}
              >
                <div
                  className="app-editable expand-wide scrollable-table-nested"
                >
                  <div
                    className="app-editable expand-wide scrollable-table-nested rental-assistance-edit-form"
                  >
                    <div
                      className="form-grid row"
                    >
                      <div
                        className="form-grid_item small-12 medium-6 large-3 column"
                      >
                        <div
                          className="form-group"
                        >
                          <label
                            className="form-label"
                            htmlFor="form-rental_assistances.0.type_of_assistance"
                            id="label-rental_assistances-0.type_of_assistance"
                          >
                            Type of Assistance
                          </label>
                          <select
                            className="rental-assistance-type"
                            id="form-rental_assistances.0.type_of_assistance"
                            name="rental_assistances.0.type_of_assistance"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            value="Compass Family"
                          >
                            <option
                              value=""
                            >
                              Select One...
                            </option>
                            <option
                              value="Catholic Charities"
                            >
                              Catholic Charities
                            </option>
                            <option
                              value="Compass Family"
                            >
                              Compass Family
                            </option>
                            <option
                              value="Glide"
                            >
                              Glide
                            </option>
                            <option
                              value="Hamilton Family"
                            >
                              Hamilton Family
                            </option>
                            <option
                              value="Homeless Prenatal"
                            >
                              Homeless Prenatal
                            </option>
                            <option
                              value="HOPWA"
                            >
                              HOPWA
                            </option>
                            <option
                              value="Q Foundation: First Month’s Rent"
                            >
                              Q Foundation: First Month’s Rent
                            </option>
                            <option
                              value="Q Foundation: Move-in Deposit"
                            >
                              Q Foundation: Move-in Deposit
                            </option>
                            <option
                              value="Q Foundation: Person with Disability Rent Subsidy"
                            >
                              Q Foundation: Person with Disability Rent Subsidy
                            </option>
                            <option
                              value="Q Foundation: Senior Rent Subsidy"
                            >
                              Q Foundation: Senior Rent Subsidy
                            </option>
                            <option
                              value="San Francisco AIDS Foundation"
                            >
                              San Francisco AIDS Foundation
                            </option>
                            <option
                              value="Section 8 HCV (tenant) voucher"
                            >
                              Section 8 HCV (tenant) voucher
                            </option>
                            <option
                              value="Self-Help for the Elderly"
                            >
                              Self-Help for the Elderly
                            </option>
                            <option
                              value="VASH voucher"
                            >
                              VASH voucher
                            </option>
                            <option
                              value="Other"
                            >
                              Other
                            </option>
                          </select>
                        </div>
                      </div>
                      <div
                        className="form-grid_item small-12 medium-6 large-3 column"
                      >
                        <div
                          className="rental-assistance-recurring radio-group-inline"
                        >
                          <label
                            className="form-label"
                            htmlFor="form-rental_assistances.0.recurring_assistance"
                            id="label-rental_assistances-0.recurring_assistance"
                          >
                            Recurring Assistance
                          </label>
                          <p
                            className="radio-inline"
                          >
                            <input
                              checked={true}
                              id="rental_assistances.0.recurring_assistance-new-yes"
                              name="rental_assistances.0.recurring_assistance"
                              onBlur={[Function]}
                              onChange={[Function]}
                              onFocus={[Function]}
                              type="radio"
                              value="Yes"
                            />
                            <label
                              className="radio-inline_label"
                              htmlFor="rental_assistances.0.recurring_assistance-new-yes"
                            >
                              Yes
                            </label>
                          </p>
                          <p
                            className="radio-inline"
                          >
                            <input
                              checked={false}
                              id="rental_assistances.0.recurring_assistance-new-no"
                              name="rental_assistances.0.recurring_assistance"
                              onBlur={[Function]}
                              onChange={[Function]}
                              onFocus={[Function]}
                              type="radio"
                              value="No"
                            />
                            <label
                              className="radio-inline_label"
                              htmlFor="rental_assistances.0.recurring_assistance-new-no"
                            >
                              No
                            </label>
                          </p>
                        </div>
                      </div>
                      <div
                        className="form-grid_item small-12 medium-6 large-3 column"
                      >
                        <div
                          className="form-group"
                        >
                          <label
                            className="form-label"
                            htmlFor="assistance_amount"
                            id="label-rental_assistances-0.assistance_amount"
                          >
                            Assistance Amount
                          </label>
                          <input
                            className=""
                            id="assistance_amount"
                            name="rental_assistances.0.assistance_amount"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            placeholder="$0.00"
                            value="100"
                          />
                        </div>
                      </div>
                      <div
                        className="form-grid_item small-12 medium-6 large-3 column"
                      >
                        <div
                          className="form-group"
                        >
                          <label
                            className="form-label"
                            htmlFor="form-rental_assistances.0.recipient"
                            id="label-rental_assistances-0.recipient"
                          >
                            Recipient
                          </label>
                          <select
                            className="rental-assistance-recipient"
                            id="form-rental_assistances.0.recipient"
                            name="rental_assistances.0.recipient"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            value="123"
                          >
                            <option
                              value=""
                            >
                              Select One...
                            </option>
                            <option
                              value="123"
                            >
                              Test Tester
                            </option>
                          </select>
                        </div>
                      </div>
                    </div>
                    <div
                      className="form-grid row"
                    >
                      <div
                        className="form-grid_item column"
                      >
                        <button
                          className="button primary tiny margin-right margin-bottom-none"
                          onClick={[Function]}
                          type="button"
                        >
                          Save
                        </button>
                        <button
                          className="button secondary tiny margin-right margin-bottom-none"
                          onClick={[Function]}
                          type="button"
                        >
                          Cancel
                        </button>
                        <button
                          className="button alert-fill tiny margin-bottom-none right"
                          onClick={[Function]}
                          type="button"
                        >
                          Delete
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
  <button
    className="button small"
    id="add-rental-assistance"
    onClick={[Function]}
  >
    Add Rental Assistance
  </button>
</form>
`;

exports[`RentalAssistance should show the Other Assistance Name in the table when Type of Assistance is Other 1`] = `
<form
  noValidate={true}
>
  <div
    className="form-grid row expand"
  >
    <div
      className="small-12 column"
    >
      <div
        className="scrollable-table-container-under-xlarge"
      >
        <table
          className="td-light td-plain th-plain rental-assistances"
          role="grid"
        >
          <thead>
            <tr>
              <th
                className=""
                scope="col"
              >
                Type of Assistance
              </th>
              <th
                className=""
                scope="col"
              >
                Recurring Assistance
              </th>
              <th
                className=""
                scope="col"
              >
                Assistance Amount
              </th>
              <th
                className=""
                scope="col"
              >
                Recipient
              </th>
              <th
                className=""
                scope="col"
              >
                Edit
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              aria-expanded={false}
              className="tr-expand"
              id={null}
            >
              <td
                className=""
              >
                Test Other Assistance Name
              </td>
              <td
                className=""
              >
                Yes
              </td>
              <td
                className=""
              >
                100
              </td>
              <td
                className=""
              >
                Test Tester
              </td>
              <td>
                <button
                  className="button button-link action-link"
                  onClick={[Function]}
                  type="button"
                >
                  Edit
                </button>
              </td>
            </tr>
            <tr
              aria-hidden={true}
              className="tr-expand-content"
              id={null}
            >
              <td
                className="td-expand-nested no-padding"
                colSpan={5}
              >
                <div
                  className="app-editable expand-wide scrollable-table-nested"
                >
                  <div
                    className="app-editable expand-wide scrollable-table-nested rental-assistance-edit-form"
                  >
                    <div
                      className="form-grid row"
                    >
                      <div
                        className="form-grid_item small-12 medium-6 large-3 column"
                      >
                        <div
                          className="form-group"
                        >
                          <label
                            className="form-label"
                            htmlFor="form-rental_assistances.0.type_of_assistance"
                            id="label-rental_assistances-0.type_of_assistance"
                          >
                            Type of Assistance
                          </label>
                          <select
                            className="rental-assistance-type"
                            id="form-rental_assistances.0.type_of_assistance"
                            name="rental_assistances.0.type_of_assistance"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            value="Other"
                          >
                            <option
                              value=""
                            >
                              Select One...
                            </option>
                            <option
                              value="Catholic Charities"
                            >
                              Catholic Charities
                            </option>
                            <option
                              value="Compass Family"
                            >
                              Compass Family
                            </option>
                            <option
                              value="Glide"
                            >
                              Glide
                            </option>
                            <option
                              value="Hamilton Family"
                            >
                              Hamilton Family
                            </option>
                            <option
                              value="Homeless Prenatal"
                            >
                              Homeless Prenatal
                            </option>
                            <option
                              value="HOPWA"
                            >
                              HOPWA
                            </option>
                            <option
                              value="Q Foundation: First Month’s Rent"
                            >
                              Q Foundation: First Month’s Rent
                            </option>
                            <option
                              value="Q Foundation: Move-in Deposit"
                            >
                              Q Foundation: Move-in Deposit
                            </option>
                            <option
                              value="Q Foundation: Person with Disability Rent Subsidy"
                            >
                              Q Foundation: Person with Disability Rent Subsidy
                            </option>
                            <option
                              value="Q Foundation: Senior Rent Subsidy"
                            >
                              Q Foundation: Senior Rent Subsidy
                            </option>
                            <option
                              value="San Francisco AIDS Foundation"
                            >
                              San Francisco AIDS Foundation
                            </option>
                            <option
                              value="Section 8 HCV (tenant) voucher"
                            >
                              Section 8 HCV (tenant) voucher
                            </option>
                            <option
                              value="Self-Help for the Elderly"
                            >
                              Self-Help for the Elderly
                            </option>
                            <option
                              value="VASH voucher"
                            >
                              VASH voucher
                            </option>
                            <option
                              value="Other"
                            >
                              Other
                            </option>
                          </select>
                        </div>
                      </div>
                      <div
                        className="form-grid_item small-12 medium-6 large-3 column"
                      >
                        <div
                          className="rental-assistance-recurring radio-group-inline"
                        >
                          <label
                            className="form-label"
                            htmlFor="form-rental_assistances.0.recurring_assistance"
                            id="label-rental_assistances-0.recurring_assistance"
                          >
                            Recurring Assistance
                          </label>
                          <p
                            className="radio-inline"
                          >
                            <input
                              checked={true}
                              id="rental_assistances.0.recurring_assistance-new-yes"
                              name="rental_assistances.0.recurring_assistance"
                              onBlur={[Function]}
                              onChange={[Function]}
                              onFocus={[Function]}
                              type="radio"
                              value="Yes"
                            />
                            <label
                              className="radio-inline_label"
                              htmlFor="rental_assistances.0.recurring_assistance-new-yes"
                            >
                              Yes
                            </label>
                          </p>
                          <p
                            className="radio-inline"
                          >
                            <input
                              checked={false}
                              id="rental_assistances.0.recurring_assistance-new-no"
                              name="rental_assistances.0.recurring_assistance"
                              onBlur={[Function]}
                              onChange={[Function]}
                              onFocus={[Function]}
                              type="radio"
                              value="No"
                            />
                            <label
                              className="radio-inline_label"
                              htmlFor="rental_assistances.0.recurring_assistance-new-no"
                            >
                              No
                            </label>
                          </p>
                        </div>
                      </div>
                      <div
                        className="form-grid_item small-12 medium-6 large-3 column"
                      >
                        <div
                          className="form-group"
                        >
                          <label
                            className="form-label"
                            htmlFor="assistance_amount"
                            id="label-rental_assistances-0.assistance_amount"
                          >
                            Assistance Amount
                          </label>
                          <input
                            className=""
                            id="assistance_amount"
                            name="rental_assistances.0.assistance_amount"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            placeholder="$0.00"
                            value="100"
                          />
                        </div>
                      </div>
                      <div
                        className="form-grid_item small-12 medium-6 large-3 column"
                      >
                        <div
                          className="form-group"
                        >
                          <label
                            className="form-label"
                            htmlFor="form-rental_assistances.0.recipient"
                            id="label-rental_assistances-0.recipient"
                          >
                            Recipient
                          </label>
                          <select
                            className="rental-assistance-recipient"
                            id="form-rental_assistances.0.recipient"
                            name="rental_assistances.0.recipient"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            value="123"
                          >
                            <option
                              value=""
                            >
                              Select One...
                            </option>
                            <option
                              value="123"
                            >
                              Test Tester
                            </option>
                          </select>
                        </div>
                      </div>
                    </div>
                    <div
                      className="form-grid row"
                    >
                      <div
                        className="form-grid_item small-12 medium-6 large-3 column"
                      >
                        <div
                          className="form-group"
                        >
                          <label
                            className="form-label"
                            htmlFor="form-rental_assistances.0.other_assistance_name"
                            id="label-rental_assistances-0.other_assistance_name"
                          >
                            Other Assistance Name
                          </label>
                          <input
                            className=""
                            id="form-rental_assistances.0.other_assistance_name"
                            name="rental_assistances.0.other_assistance_name"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            type="text"
                            value="Test Other Assistance Name"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      className="form-grid row"
                    >
                      <div
                        className="form-grid_item column"
                      >
                        <button
                          className="button primary tiny margin-right margin-bottom-none"
                          onClick={[Function]}
                          type="button"
                        >
                          Save
                        </button>
                        <button
                          className="button secondary tiny margin-right margin-bottom-none"
                          onClick={[Function]}
                          type="button"
                        >
                          Cancel
                        </button>
                        <button
                          className="button alert-fill tiny margin-bottom-none right"
                          onClick={[Function]}
                          type="button"
                        >
                          Delete
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
  <button
    className="button small"
    id="add-rental-assistance"
    onClick={[Function]}
  >
    Add Rental Assistance
  </button>
</form>
`;
